# EasySpreadsheet

./: .gitignore  README.rst  pyproject.toml
docs/: Easy Spreadsheet Presentation.odp
src/easyspreadsheet/: BuildSimpleSpreadsheet.py  Constants.py
tests/: test_easyspreadsheet.py
